--- a/MagitWeb/web/index.html
+++ b/MagitWeb/web/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="Pages/SignupPage/indexStyle.css">
+<!--    <link rel="stylesheet" type="text/css" href="Pages/SignupPage/indexStyle.css">-->
     <meta charset="UTF-8">
     <title>Magit</title>
 </head>
 <body>
-<meta http-equiv = "refresh" content = "0; url = /Magit/Signup" />
+<meta http-equiv = "refresh" content = "0; url = /Magit/Login" />
 <!--<form>-->
 <!--    <div class="container">-->
 <!--        <h1>Magit Web</h1>-->
