--- a/MagitWeb/web/index.html
+++ b/MagitWeb/web/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <title>Magit</title>
 </head>
-<body>
-<meta http-equiv = "refresh" content = "0; url = /Magit/Login" />
+<body onload="document.getElementById('lnkhome').click();">
+
+
+<a href="Pages/Login/Login.html" id="lnkhome" role="button">go for log in</a>
+
 <!--<form>-->
 <!--    <div class="container">-->
 <!--        <h1>Magit Web</h1>-->
