--- a/MagitWeb/web/Pages/Login/Login.html
+++ b/MagitWeb/web/Pages/Login/Login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script type="text/javascript" src="../../common/jquery.new.js"></script>
     <meta charset="UTF-8">
     <title>login</title>
-<!--    <link rel="stylesheet" href="/common/bootstrap.min.css">-->
-    <script type="text/javascript" src="/common/jquery-3.4.1.min.js"></script>
+    <link rel="stylesheet" href="/common/bootstrap.min.css">
     <script src="Login.js"></script>
 <!--    <link rel="stylesheet" href="Login.css">-->
 </head>
