--- a/MagitWeb/web/Pages/Login/Login.html
+++ b/MagitWeb/web/Pages/Login/Login.html
@@ -4,7 +4,7 @@
     <script type="text/javascript" src="../../common/jquery.new.js"></script>
     <meta charset="UTF-8">
     <title>login</title>
-    <link rel="stylesheet" href="/common/bootstrap.min.css">
+    <link rel="stylesheet" href="../../common/bootstrap.min.css">
     <script src="Login.js"></script>
 <!--    <link rel="stylesheet" href="Login.css">-->
 </head>
