--- a/MagitWeb/web/Pages/Login/Login.html
+++ b/MagitWeb/web/Pages/Login/Login.html
@@ -16,7 +16,9 @@
         Enter user name:
     </h3>
     <input type="text" id="userName" name="userName">
-    <button id="logInBtn">Log in!</button>
+    <button id="signUpBtn">Sign up</button>
+    <button id="signInBtn">Sign in</button>
+
     <div id="s">
     </div>
 </div>
