I commit to aooskdoaskdoa sdaihvdiansfin ajsnuahsdinaef abiadiansdinaisd ashfbuashf osas

--- a/MagitWeb/web/index.html
+++ b/MagitWeb/web/index.html
@@ -8,7 +8,7 @@
 <body onload="document.getElementById('lnkhome').click();">
 
 
-<a href="Pages/Login/Login.html" id="lnkhome" role="button">go for log in</a>
+<a href="Pages/Login/Login.jsp" id="lnkhome" role="button">go for log in</a>
 
 <!--<form>-->
 <!--    <div class="container">-->
